--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Online education platform for students and teachers"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
- 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
-    <link rel="stylesheet" href="/css/video-react.css" />
+    <title>Eduvation</title>
     <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  />
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
- 
   </body>
 </html>
